# pacsmv-501011

./: .gitignore  .gitmodules  README.md  pyproject.toml  ruff.toml
ckpts/diffusion/: config.json  weights.pt
comfy-workflows/: ave-mujica-caption.json  ave-mujica-gen.json
configs/: hw1-adam.toml  hw1-sgd.toml  hw2-demo.toml  hw2-train.toml  hw3-demo.toml  hw3-train.toml  hw3.toml  settings.json
pics/ave-mujica/1_avemujica/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
scripts/: download_fmnist.sh  download_mnist.sh  download_uno_cards.sh
src/pacsmv_501011/core/: log.py  metrics.py  projection.py  record.py  train_state.py
src/pacsmv_501011/core/object_detection/: bbox.py  coco.py
src/pacsmv_501011/dataset/: mnist.py
src/pacsmv_501011/hw1/: main.py  report.md
src/pacsmv_501011/hw2/: demo.py  main.py  report.md  train.py  uno_detector.py
src/pacsmv_501011/hw3/: demo.py  main.py  report-old.md  report.md  sampler.py  train.py  utils.py
src/pacsmv_501011/model/: mlp.py
src/pacsmv_501011/models/: latent_diffusion.py  spatial_transformer.py  unet.py  vae.py
src/pacsmv_501011/models/unet_blocks/: attention.py  decoder.py  encoder.py  res.py  residual.py
test/pacsmv_501011/models/: test_spatial_transformer.py  test_unet.py
test/pacsmv_501011/models/unet_blocks/: test_attention.py  test_decoder.py  test_encoder.py
