[project]
name = "pacsmv-501011"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "comfy-cli>=1.3.6",
    "dacite>=1.8.1",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.1",
    "pillow>=11.1.0",
    "pyqt5>=5.15.11",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.18.0",
    "torch==2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "ultralytics>=8.3.23",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
hw1 = "pacsmv_501011.hw1.main:main"
hw2 = "pacsmv_501011.hw2.main:cli"
hw3 = "pacsmv_501011.hw3.main:main"

